--- a/static/french.html
+++ b/static/french.html
@@ -14,7 +14,7 @@
     <title>Le portfolio de Nath</title>
 </head>
 <body>
-
+    <div class="cursor"></div>
     <!-- HEADER -->
     <header id="header">
         <nav class="flex">
@@ -44,7 +44,7 @@
         <section id="landing" class="container-landing flex">
             <h1 class="flipX">
                 <ul class="landing fluid">
-                    <li>Developeuse web <span class="grow">Front-End</span> junior.</li>
+                    <li><span class="grow">Developpeuse web</span> Front-End.</li>
                     <li>Spécialisée en <span class="grow">UX/UI design</span> et communication digitale.</li>
                     <li><span class="grow">Bilingue</span> anglais.</li>
                     <li>Basée à <span class="grow">Paris</span>.</li>
@@ -78,7 +78,7 @@
                     <li class="flex work">
                         <span class="text-wrapper">
                             <span class="letters">
-                            On travaille ensemble ?
+                            Voulez-vous qu'on travaille ensemble?
                             </span>
                         </span>
                     </li>
@@ -122,18 +122,6 @@
             <article class="medtechtext flex">
                 <h5>Prix #Hackeuses Simplon</h5>
                 <p>Mon tout premier project de site web, en français et en anglais, présenté devant un jury de développeurs professionnels. Thème de la certification : "Femmes et numérique, je code donc je suis".<br>Prix du jury #Hackeuses reçu pour le design du site et l'originalité du sujet.</p>
-            </article>
-            <img class="emojisearchpic flex" src="../images/emoji-search.png" alt="">
-            <article class="emojisearchtext flex">
-                <h5>Emoji Search</h5>
-                <p>Tech used. Purpose. Challenges.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt totam repudiandae facere itaque, voluptates porro non earum. Excepturi..<br>Want to try it? Here's the <a href="https://natcancode.github.io/worldweather/static/index.html">link</a>!</p>
-            </article>
-            <img class="emojigardenpic" src="../images/emoji-garden.png" alt="">
-            <article class="emojigardentext flex">
-                <h5>Emoji Garden</h5>
-                <p>Tech used. Purpose. Challenges.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt totam repudiandae facere itaque, voluptates porro non earum. Excepturi.</p>
             </article>
             <img class="picsharepic" src="../images/picshare-homepage.png" alt="">
             <article class="picsharetext flex">
@@ -225,6 +213,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="../script/french.js"></script>
-    <script src="../script/app.js"></script>
+    <!-- <script src="../script/app.js"></script> -->
 </body>
 </html>
