--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script> -->
     <!-- <script src="/lib/scrollreveal.min.js"></script> -->
     <!-- <script src="https://unpkg.com/scrollreveal"></script> -->
-    <link rel="shorcut icon" type="image" href="../images/pinwheelD8AC9C.svg">
+    <link rel="shorcut icon" type="image" href="../images/pinwheel-light-gradient.svg">
     <title>Nat's portfolio</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
                 <div class="line line3 toggle"></div>
             </div>
             <div class="nat flex">
-                <a href="#about"><img class="infinite-spin" src="../images/pinwheel0A0402.svg" alt="white-pinwheel-vector-origami-logo"></a>
+                <a href="#about"><img class="infinite-spin" src="../images/pinwheel-dark-gradient.svg" alt="white-pinwheel-vector-origami-logo"></a>
                 <div class="dark-light-switch">
                     <input type="checkbox" id="toggle" class="checkbox">
                     <label class="flick flex" for="toggle">
@@ -123,7 +123,7 @@
             <article class="aboutme flex container-eight">
                 <ul class="">
                     <li class="flex">I'm a junior Web Developer living in Paris, previously working in international communications, and always up for learning new things.</li>
-                    <li class="flex">At the crossroad between UX/UI design and Front-End Development, I aim to create neat, minimalist and responsive websites. I strive for simplicity, clarity, and purity in my work.</li>
+                    <li class="flex">At the crossroads between UX/UI design and Front-End Development, I aim to create neat, minimalist, and responsive websites. I strive for simplicity, clarity, and purity in my work.</li>
                     <li class="flex">The technologies I usually use are HTML5, CSS3, JavaScript, Python and React, and I prototype with Figma.</li>
                     <li class="flex">I’m a coffee AND tea addict, inspired by my peers and colleagues, my little one, my partner, my grumpy cat, anything and everything photography related, and MedTech innovation.</li>
                     <li class="flex">I take pride in building and developing projects that can help make the world a better place.</li>
@@ -145,10 +145,10 @@
         <!-- SKILLS -->
         <section id="skills">
             <h3 class="softskillstitle flex">Soft skills</h3>
-            <img class="icon1 flex" src="../images/eye-for-detail.svg"></img>
-            <img class="icon2 flex" src="../images/fast-learner.svg"></img>
-            <img class="icon3 flex" src="../images/creative.svg"></img>
-            <img class="icon4 flex" src="../images/problem-solver.svg"></img>
+            <img class="icon1 flex" src="../images/eye-dark-gradient.svg"></img>
+            <img class="icon2 flex" src="../images/learner-dark-gradient.svg"></img>
+            <img class="icon3 flex" src="../images/creative-dark-gradient.svg"></img>
+            <img class="icon4 flex" src="../images/solver-dark-gradient.svg"></img>
             <li class="skill1 flex">Eye for details</li>
             <li class="skill2 flex">Fast learner</li>
             <li class="skill3 flex">Creative spirit</li>
