--- a/static/french.html
+++ b/static/french.html
@@ -116,12 +116,12 @@
             </video> -->
             <article class="weathertext flex">
                 <h5>App météo</h5>
-                <p>Pour obtenir la météo en temps réel absolument partout dans le monde ! L'une de mes premières pages web véritablement interactives, codée en HTML, CSS, JavaScript, et en utilisant deux APIs.<br>Prêt à tester ? Voici le <a href="https://natcancode.github.io/worldweather/static/index.html">lien !</a></p>
+                <p>Pour obtenir la météo en temps réel absolument partout dans le monde ! L'une de mes premières pages web véritablement interactives, codée en HTML, CSS, JavaScript, et en utilisant deux APIs.<br><a href="https://natcancode.github.io/worldweather/static/index.html">Prêt à tester ?</a></p>
             </article>
             <img class="medtechpic" src="../images/medtech-homepage.png" alt="">
             <article class="medtechtext flex">
                 <h5>Prix #Hackeuses Simplon</h5>
-                <p>Mon tout premier project de site web, en français et en anglais, présenté devant un jury de développeurs professionnels. Thème de la certification : "Femmes et numérique, je code donc je suis".<br>Prix du jury #Hackeuses reçu pour le design du site et l'originalité du sujet.</p>
+                <p>Mon tout premier project de site web, en français et en anglais, présenté devant un jury de développeurs professionnels. Thème de la certification : "Femmes et numérique, je code donc je suis".<br>Prix du jury #Hackeuses reçu pour le <a href="https://natcancode.github.io/medtech/english.html"></a>design du site</a> et l'originalité du sujet.</p>
             </article>
             <img class="picsharepic" src="../images/picshare-homepage.png" alt="">
             <article class="picsharetext flex">
@@ -137,23 +137,28 @@
             <img class="flourshowerpic" src="../images/flourshower.png" alt="">
             <article class="flourshowertext flex">
                 <h5>Flour Shower</h5>
-                <p>Pages HTML/CSS entièrement responsive, réalisées à partir de mockups. L'exercice n'était pas de re-designer le site web d'un patissier, mais d'implémenter les 5 pages à la lettre, avec un code propre. C'est avec ce projet que je me suis prise de passion pour les grids, et les titres qui chevauchent des blocs.<br>J'ai même gagné des points supplémentaires en faisant un embed des informations GoogleMaps sur la page contact ! <br>Vous pouvez naviguer à travers <a href="https://natcancode.github.io/flourshowerproject/flourshower3.html">les pages du projet</a> en cliquant sur les boutons, et les liens About, Contact, Unavoidable, Amazing dans le header et footer.</p>
-            </article>
-            <img class="imagegallerypic" src="../images/image-gallery-animation.png" alt="">
-            <article class="imagegallerytext flex">
-                <h5>Animation d'une galerie d'images</h5>
-                <p>Projet personnel sur l'animation d'une galerie d'images en codant avec JavaScrip. Pop-up d'images fluide avec une légende en aperçu. Les images sont cliquables, elles s'agrandissent lorsqu'on clique dessus, et une légende s'affiche. <br>Voici le  <a href="https://natcancode.github.io/image-gallery-animation/">lien</a> !</p>
+                <p>Pages HTML/CSS entièrement responsive, réalisées à partir de mockups. L'exercice n'était pas de re-designer le site web d'un patissier, mais d'implémenter les 5 pages à la lettre, avec un code propre. C'est avec ce projet que je me suis prise de passion pour les grids, et les titres qui chevauchent des blocs !<br>J'ai même gagné des points supplémentaires en faisant un embed des informations GoogleMaps sur la page contact ! <br>Vous pouvez naviguer à travers <a href="https://natcancode.github.io/flourshowerproject/flourshower3.html">les pages</a> du projet en cliquant sur les boutons, et les liens About, Contact, Unavoidable, Amazing dans le header et footer.</p>
             </article>
             <img class="eshoppic" src="../images/eshop-terra.png" alt="">
             <article class="eshoptext flex">
                 <h5>Terra E-shop</h5>
-                <p>Projet de site e-commerce construit à Simplon. Attention particulière donnée au design UX/UI, de la landing page, en passant par les pages panier et paiement.  <br>Approche "Mobile first". Lien vers le site web <a href="https://natcancode.github.io/EcommerceTerra/">ici</a>.</p>
+                <p>Projet de <a href="https://natcancode.github.io/EcommerceTerra/">site e-commerce</a> construit à Simplon. Attention particulière donnée au design UX/UI, de la landing page, en passant par les pages panier et paiement. <br>Approche "Mobile first", animation du titre en JavaScript, carrousel.</p>
             </article>
-            <img class="uidesignpic" src="../images/UI-design.png" alt="">
+            <img class="imagegallerypic" src="../images/image-gallery-animation.png" alt="">
+            <article class="imagegallerytext flex">
+                <h5>Animation d'une galerie d'images</h5>
+                <p>Projet personnel sur l'animation d'une <a href="https://natcancode.github.io/image-gallery-animation/">galerie d'images</a> en codant avec JavaScrip. Pop-up d'images fluide avec une légende en aperçu. Les images sont cliquables, elles s'agrandissent lorsqu'on clique dessus, et la légende s'affiche.</p>
+            </article>
+            <img class="jsanimationspic" src="../images/letter-animations.png" alt="">
+            <article class="jsanimationstext flex">
+                <h5>Animations de lettres</h5>
+                <p>Projet personnel sur l'animation de <a href="https://natcancode.github.io/loading-letter-animation/">lettres</a> en JavaScript en utilisant des librairies JS - Anime et ScrollReveal - et création d'un effet de lettrage au chargement lorsque la connexion est lente.</p>
+            </article>
+            <!-- <img class="uidesignpic" src="../images/UI-design.png" alt="">
             <article class="uidesigntext flex">
                 <h5>Premier design UI</h5>
                 <p>tout premier projet sur Figma dont le but était de re-penser le design d'un site web truffé de fautes de goût. <br>J'ai adoré découvrir ce nouvel outil !</p>
-            </article>
+            </article> -->
 
             <a href="#projects"><p class="up flex">Up</p></a>
         </section>
