--- a/static/index.html
+++ b/static/index.html
@@ -127,13 +127,7 @@
                     <li class="flex">The technologies I usually use are HTML5, CSS3, JavaScript, Python and React, and I prototype with Figma.</li>
                     <li class="flex">I’m a coffee AND tea addict, inspired by my peers and colleagues, my little one, my partner, my grumpy cat, anything and everything photography related, and MedTech innovation.</li>
                     <li class="flex">I take pride in building and developing projects that can help make the world a better place.</li>
-                    <li class="flex work">
-                        <span class="text-wrapper">
-                            <span class="letters">
-                            Interested in working together?
-                            </span>
-                        </span>
-                    </li>
+                    <li class=" work">Interested in working together?</li>
                     <div class="container-eight flex">
                         <div class="eight flex">8</div>
                     </div>
@@ -218,12 +212,12 @@
             </video> -->
             <article class="weathertext flex">
                 <h5>Weather app</h5>
-                <p>Getting the weather in real time absolutely everywhere in the  world! One of my first proper interactive web pages - coded in HTML, CSS, JavaScript, and using two APIs.<br>Want to try it? Here's the <a href="https://natcancode.github.io/worldweather/static/index.html">link</a>!</p>
+                <p>Getting the weather in real time absolutely everywhere in the  world! One of my first proper interactive web pages - coded in HTML, CSS, JavaScript, and using two APIs.<br><a href="https://natcancode.github.io/worldweather/static/index.html">Want to try it?</a></p>
             </article>
             <img class="medtechpic" src="../images/medtech-homepage.png" alt="">
             <article class="medtechtext flex">
                 <h5>Simplon #Hackeuses Certification Award</h5>
-                <p>My very first website project - English and French pages - presented to a jury of professional web developers. Certification subject: "Women and tech - I code therefore I am".<br>#Hackeuses jury prize awarded for the website design and subject originality.</p>
+                <p>My very first website project - English and French pages - presented to a jury of professional web developers. Certification subject: "Women and tech - I code therefore I am".<br>#Hackeuses jury prize awarded for the <a href="https://natcancode.github.io/medtech/english.html">website design</a> and subject originality.</p>
             </article>
             <img class="picsharepic" src="../images/picshare-homepage.png" alt="">
             <article class="picsharetext flex">
@@ -239,23 +233,28 @@
             <img class="flourshowerpic" src="../images/flourshower.png" alt="">
             <article class="flourshowertext flex">
                 <h5>Flour Shower</h5>
-                <p>Fully responsive HTML/CSS pages built from mockups. The job was not to re-design a 5-page bakery website but to faithfully implement the provided visuals with a clean code. This is where I got hooked on grids, and titles that overlap blocks.<br>Bonus points awarded for the embedded GoogleMaps information on the contact page! <br>You can navigate through <a href="https://natcancode.github.io/flourshowerproject/flourshower3.html">the project pages</a> clicking on the buttons and the About, Contact, Unavoidable, Amazing links on the header and footer.</p>
-            </article>
-            <img class="imagegallerypic" src="../images/image-gallery-animation.png" alt="">
-            <article class="imagegallerytext flex">
-                <h5>Image gallery animation</h5>
-                <p>Personal project on image gallery animation with JavaScrip. Fluid image  pop-up with a preview caption. The images are clickable - they expand when clicked and a caption is displayed. <br>Here is the <a href="https://natcancode.github.io/image-gallery-animation/">link</a>!</p>
+                <p>Fully responsive HTML/CSS pages built from mockups. The job was not to re-design a 5-page bakery website but to faithfully implement the provided visuals with a clean code. This is where I got hooked on grids, and titles that overlap blocks!<br>I got bonus points awarded for the embedded GoogleMaps information on the contact page! <br>You can navigate through the <a href="https://natcancode.github.io/flourshowerproject/flourshower3.html">project pages</a> clicking on the buttons and the About, Contact, Unavoidable, Amazing links on the header and footer.</p>
             </article>
             <img class="eshoppic" src="../images/eshop-terra.png" alt="">
             <article class="eshoptext flex">
                 <h5>Terra E-shop</h5>
-                <p>E-shop website project built at Simplon. Special focus made on UX/UI design from the landing page to the basket and payment pages. <br>Mobile first approach. Website link <a href="https://natcancode.github.io/EcommerceTerra/">here</a>.</p>
+                <p><a href="https://natcancode.github.io/EcommerceTerra/">E-shop website</a> project built at Simplon. Special focus made on UX/UI design from the landing page to the basket and payment pages. <br>Mobile first approach, JavaScript title animation, and carousel.</p>
             </article>
-            <img class="uidesignpic" src="../images/UI-design.png" alt="">
+            <img class="imagegallerypic" src="../images/image-gallery-animation.png" alt="">
+            <article class="imagegallerytext flex">
+                <h5>Image gallery animation</h5>
+                <p>Personal project on <a href="https://natcancode.github.io/image-gallery-animation/">image gallery animation</a> with JavaScript. Fluid image pop-up with a preview caption. The images are clickable - they expand when clicked and the caption is displayed.</p>
+            </article>
+            <img class="jsanimationspic" src="../images/letter-animations.png" alt="">
+            <article class="jsanimationstext flex">
+                <h5>Letter animations</h5>
+                <p>Personal project on <a href="https://natcancode.github.io/loading-letter-animation/">letter animations</a> with JavaScript using JS libraries - Anime and ScrollReveal - and creation of a letter loader effect in case of poor network.</p>
+            </article>
+            <!-- <img class="uidesignpic" src="../images/UI-design.png" alt="">
             <article class="uidesigntext flex">
                 <h5>First UI design</h5>
                 <p>Very first project on Figma. The goal was to rethink the design of a website full of UI mistakes. <br>I had a blast discovering this new tool!</p>
-            </article>
+            </article> -->
 
             <a href="#projects"><p class="up flex">Up</p></a>
         </section>
